k3s/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 500m
  name: nextcloud-ingress
  namespace: nextcloud
spec:
  rules:
  - host: nextcloud.tino.sh
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: nextcloud-server
            port: 
              number: 80
  tls:
  - hosts:
    - nextcloud.tino.sh
    secretName: nextcloud-tino-sh-tls
